# airtel-money-rs

./: .gitignore  CALLBACK_SERVER.md  Cargo.toml  INTEGRATION_TESTS.md  TLS_SUPPORT.md  deny.toml  deny.toml.bak  readme.md  run_integration_tests.sh  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: api_integration.md  bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  dependabot.yml  nightly.yml  performance.yml  release.yml  security.yml
airtel_money_callback_server/: Cargo.toml
airtel_money_callback_server/src/: main.rs
examples/: basic_usage.rs  callback_server_tls.rs  callback_server_usage.rs
src/: callback_server.rs  client.rs  common.rs  config.rs  errors.rs  lib.rs  main.rs
src/enums/: country.rs  currency.rs  environment.rs  mod.rs
src/products/: account.rs  cash_in.rs  cash_out.rs  collection.rs  disbursement.rs  mod.rs  remittance.rs
src/requests/: cash_in_payment_request.rs  cash_out_request_payment.rs  collection_refund_request.rs  disbursement_payment_request.rs  mod.rs  remittance_eligibility_request.rs  remittance_refund_request.rs  remittance_transfer_credit_request.rs  remittance_transfer_status_request.rs  token_request.rs  ussd_push_request.rs
src/responses/: account_balance_response.rs  cash_in_response.rs  cash_out_response.rs  collection_refund_response.rs  collection_status_response.rs  collection_ussd_response.rs  disbursement_payment_response.rs  mod.rs  remittance_eligibility_response.rs  remittance_refund_response.rs  remittance_status_response.rs  remittance_transfer_response.rs
tests/: diagnostic_test.rs  integration_tests.rs  live_api_tests.rs  mock_demo_tests.rs
