[package]
name = "airtel_rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A comprehensive Rust SDK for integrating with the Airtel Money API"
documentation = "https://docs.rs/airtel_rs"
homepage = "https://github.com/yourusername/airtel_money_rs"
repository = "https://github.com/yourusername/airtel_money_rs"
license = "MIT OR Apache-2.0"
keywords = ["airtel", "mobile-money", "payments", "africa", "fintech"]
categories = ["api-bindings", "web-programming", "web-programming::http-client"]
readme = "README.md"
exclude = [
    ".env",
    ".env.*",
    "tests/",
    "examples/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chrono = { version = "0.4.31", features = ["serde"]}
dotenv = "0.15.0"
once_cell = "1.19.0"
reqwest = { version = "0.12.3", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.33.0", features = ["full"] }
futures = "0.3"

warp = "0.3"
env_logger = "0.10"
log = "0.4"

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics"]

