[package]
name = "airtel_rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A comprehensive Rust SDK for integrating with the Airtel Money API"
documentation = "https://docs.rs/airtel_rs"
homepage = "https://github.com/yourusername/airtel_money_rs"
repository = "https://github.com/yourusername/airtel_money_rs"
license = "MIT OR Apache-2.0"
keywords = ["airtel", "mobile-money", "payments", "africa", "fintech"]
categories = ["api-bindings", "web-programming", "web-programming::http-client"]
readme = "README.md"
exclude = [
    ".env",
    ".env.*",
    "tests/",
    "examples/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chrono = { version = "0.4.31", features = ["serde"]}
dotenvy = "0.15.7"
once_cell = "1.19.0"
reqwest = { version = "0.12.3", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.33.0", features = ["full"] }
futures = "0.3"
backoff = { version = "0.4.0", features = ["tokio"] }
circuit-breaker = "0.3.0"
governor = "0.6.0"
thiserror = "1.0.50"

# Callback server dependencies (optional)
warp = { version = "0.3", features = ["tls"], optional = true }
env_logger = { version = "0.10", optional = true }
log = { version = "0.4", optional = true }
async-stream = { version = "0.3", optional = true }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
tokio-rustls = { version = "0.24", optional = true }
rustls = { version = "0.21", optional = true }
rustls-pemfile = { version = "1.0", optional = true }

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics"]

[features]
default = []
callback_server = ["warp", "env_logger", "log", "async-stream", "futures-core", "futures-util", "tokio-rustls", "rustls", "rustls-pemfile"]

