[package]
name = "airtel_money_callback_server"
version = "0.1.0"
edition = "2021"
description = "Standalone HTTP server for receiving Airtel Money payment callbacks"
license = "MIT"
keywords = ["airtel", "money", "payment", "webhook", "callback"]
categories = ["web-programming::http-server", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
